--- a/src/app/project_group/template/detail.html
+++ b/src/app/project_group/template/detail.html
@@ -15,6 +15,19 @@
                 <small>Projects</small>
             </span>
             <i class="fa fa-2x fa-sb-project visible-xs"></i>
+            <div class="col-xs-12">
+                <br />
+                <result-set-pager
+                        class="form-control-static text-muted"
+                        total="projectCount"
+                        offset="projectSearchOffset"
+                        limit="projectSearchLimit"
+                        minimal-pager="true"
+                        on-next-page="nextPage()"
+                        on-previous-page="previousPage()"
+                        on-page-size="updatePageSize(pageSize)"
+                        ></result-set-pager>
+            </div>
         </div>
         <div class="col-xs-10">
             <table class="table table-condensed table-striped table-clean">
@@ -65,6 +78,19 @@
                            ng-change="filterStories()"/>
                     Invalid
                 </div>
+            </div>
+            <div class="col-xs-12 text-center text-muted">
+                <br />
+                <result-set-pager
+                        class="form-control-static text-muted"
+                        total="storyCount"
+                        offset="storySearchOffset"
+                        limit="storySearchLimit"
+                        minimal-pager="true"
+                        on-next-page="nextStories()"
+                        on-previous-page="previousStories()"
+                        on-page-size="updatePageSize(pageSize)"
+                        ></result-set-pager>
             </div>
         </div>
         <div class="col-xs-10">
