--- a/src/app/stories/template/detail.html
+++ b/src/app/stories/template/detail.html
@@ -213,17 +213,18 @@
     <div>
         <h4>Events timeline
             <a href ng-click="updateFilter()" ng-show="isLoggedIn"><i class="fa fa-gear"></i></a>
-        </h4>
-        <div class="discussion">
             <result-set-pager
-                    class="form-control-static text-muted"
+                    class="text-muted pull-right"
                     total="searchTotal"
                     offset="searchOffset"
                     limit="searchLimit"
                     on-next-page="nextPage()"
                     on-previous-page="previousPage()"
                     on-page-size="updatePageSize(pageSize)"
+                    minimal-pager="false"
                     ></result-set-pager>
+        </h4>
+        <div class="discussion">
             <div class="alert alert-warning"
                  ng-show="comments.length == 0">
                 The discussion hasn't started yet
