--- a/src/app/project_group/template/detail.html
+++ b/src/app/project_group/template/detail.html
@@ -23,8 +23,8 @@
                         offset="projectSearchOffset"
                         limit="projectSearchLimit"
                         minimal-pager="true"
-                        on-next-page="nextPage(projectSearchOffset)"
-                        on-previous-page="previousPage(projectSearchOffset)"
+                        on-next-page="nextPage('projects')"
+                        on-previous-page="previousPage('projects')"
                         on-page-size="updatePageSize(pageSize)"
                         ></result-set-pager>
             </div>
@@ -87,8 +87,8 @@
                         offset="storySearchOffset"
                         limit="storySearchLimit"
                         minimal-pager="true"
-                        on-next-page="nextPage(storySearchOffset)"
-                        on-previous-page="previousPage(storySearchOffset)"
+                        on-next-page="nextPage('stories')"
+                        on-previous-page="previousPage('stories')"
                         on-page-size="updatePageSize(pageSize)"
                         ></result-set-pager>
             </div>
