--- a/src/app/admin/template/project_group.html
+++ b/src/app/admin/template/project_group.html
@@ -53,6 +53,8 @@
                         offset="searchOffset"
                         limit="searchLimit"
                         on-page-size="updatePageSize(pageSize)"
+                        on-next-page="nextPage()"
+                        on-previous-page="previousPage()"
                         ></result-set-pager>
             </div>
         </div>
