--- a/src/app/stories/template/list.html
+++ b/src/app/stories/template/list.html
@@ -53,6 +53,7 @@
                     <i class="fa fa-refresh fa-spin"
                        ng-show="loadingCriteria"></i>
                 </span>
+                {{criteria}}
                 <result-set-pager
                         class="form-control-static text-muted pull-right"
                         total="searchTotal"
