--- a/src/theme/base/bootstrap/tables.less
+++ b/src/theme/base/bootstrap/tables.less
@@ -42,3 +42,8 @@ table.table.table-clean {
         }
     }
 }
+.table-striped {
+    > tbody > tr:nth-of-type(even) {
+        background-color: @white;
+    }
+}
