WIP: Hacking on a kanban view
Change-Id: I3e60f9959ab5855712fbfeca3283e6bb90802505

--- a/src/app/stories/template/detail.html
+++ b/src/app/stories/template/detail.html
@@ -186,7 +186,7 @@
             </td>
         </tr>
         </thead>
-        <tbody>
+        <tbody ui-sortable ng-model="tasks">
         <tr ng-repeat="task in tasks"
             ng-include
             src="'/inline/task_list_item.html'">
