--- a/src/app/dashboard/template/priorities.html
+++ b/src/app/dashboard/template/priorities.html
@@ -1,30 +1,39 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12">
-            <h1>Priorities</h1>
+            <button class="btn btn-primary btn-sm pull-bottom-right">
+                Edit Board
+            </button>
+            <h1 class="no-margin-bottom">Kanban test</h1>
+        </div>
+        <div class="col-sm-12">
+            <p class="text-muted">
+                This is a mockup of a potential kanban view. Any changes made will not be permanent.
+                Adding cards is not yet possible, but both cards and lanes can be rearranged.
+            </p>
         </div>
     </div>
-    <div class="row" ui-sortable="{'ui-floating': true}" ng-model="priorityLists">
-        <div class="col-sm-2" ng-repeat="priorities in priorityLists">
-            <table class="table table-striped table-bordered table-hover">
-                <thead>
-                <th colspan="2">lane</th>
-                </thead>
-                <tbody ui-sortable="{connectWith: '.kanban-lane'}" ng-model="priorities" data-link="row" class="kanban-lane rowlink">
-                <tr ng-repeat="story in priorities">
-                    <td>
+    <div class="row" ui-sortable ng-model="priorityLists">
+        <div class="col-sm-2 kanban-lane" ng-repeat="priorities in priorityLists">
+            <a class="btn-kanban-link pull-right"><i class="fa fa-plus"></i></a>
+            {{ priorities.title }}
+            <div ui-sortable="{connectWith: '.kanban-lane-contents', placeholder:
+            'kanban-card-placeholder', forcePlaceholderSize: true}"
+                 ng-model="priorities.contents"
+                 class="kanban-lane-contents">
+                <div ng-repeat="story in priorities.contents">
+                    <div class="kanban-card">
                         <a href="#!/story/{{story.id}}">
                             {{story.title}}
                         </a>
-                    </td>
-                </tr>
-                <td colspan="3" class="text-center text-muted" ng-show="priorities.length == 0">
-                    <em>
-                        This lane is empty.
-                    </em>
-                </td>
-                </tbody>
-            </table>
+                    </div>
+                </div>
+            </div>
+            <div class="text-center text-muted">
+                <button class="btn btn-kanban-lane">
+                    Add a card...
+                </button>
+            </div>
         </div>
     </div>
 </div>
