WIP: no-functionality warning
Change-Id: I3f8acfdd7f20011a6978d982b47e961aaac2f502

--- a/src/app/dashboard/template/priorities.html
+++ b/src/app/dashboard/template/priorities.html
@@ -9,7 +9,8 @@
         <div class="col-sm-12">
             <p class="text-muted">
                 This is a mockup of a potential kanban view. Any changes made will not be permanent.
-                Adding cards is not yet possible, but both cards and lanes can be rearranged.
+                Adding cards is not yet possible, but both cards and lanes can be rearranged. None
+                of the buttons on this screen will work yet.
             </p>
         </div>
     </div>
