--- a/src/app/dashboard/template/submenu.html
+++ b/src/app/dashboard/template/submenu.html
@@ -19,9 +19,14 @@
             <i class="fa fa-sb-user fa-lg"></i>
         </a>
     </li>
-    <li active-path="^\/dashboard/priorities.*">
-        <a href="#!/dashboard/priorities" title="Priorities">
+    <li active-path="^\/dashboard/kanban.*">
+        <a href="#!/dashboard/kanban" title="Kanban Test">
             <i class="fa fa-tasks fa-lg"></i>
+        </a>
+    </li>
+    <li active-path="^\/dashboard/worklists.*">
+        <a href="#!/dashboard/worklists" title="Worklist Test">
+            <i class="fa fa-list-alt fa-lg"></i>
         </a>
     </li>
 </ul>
