--- a/src/app/stories/template/detail.html
+++ b/src/app/stories/template/detail.html
@@ -50,6 +50,9 @@
             <a href="" ng-click="toggleEditMode()" >
                 <i class="fa fa-pencil"></i>
             </a>
+            <a href="" ng-click="remove()" permission="is_superuser">
+                <i class="fa fa-times fa-lg"></i>
+            </a>
             <subscribe resource="story"
                    resource-id="story.id"></subscribe>
         </small>
