--- a/src/app/worklists/template/additem.html
+++ b/src/app/worklists/template/additem.html
@@ -2,7 +2,7 @@
     <div class="panel-heading">
         <button type="button" class="close" aria-hidden="true"
                 ng-click="close()">&times;</button>
-        <h3 class="panel-title">Adding item to {{worklist.title}}</h3>
+        <h3 class="panel-title">Adding items to {{worklist.title}}</h3>
     </div>
     <div class="panel-body">
         <div class="row">
