WIP: Allow worklist to associate with project
Change-Id: I0b2046027b83738eeb5d237b5bed2703afc9de98

--- a/src/app/worklists/template/new.html
+++ b/src/app/worklists/template/new.html
@@ -38,7 +38,7 @@
                                    in searchProjects($viewValue)"
                                    typeahead-loading="loadingProjects"
                                    typeahead-input-formatter="formatProjectName($model)"
-                                   typeahead-on-select="selectNewProject($model, task)"
+                                   typeahead-on-select="selectNewProject($model)"
                                    class="form-control"
                                     />
                             <span class="form-control-feedback text-muted
