WIP: worklists touchups
Change-Id: I6c1dee7a308d2d20739734d0ae1c3c4fa1c571a2

--- a/src/theme/custom/theme.less
+++ b/src/theme/custom/theme.less
@@ -173,6 +173,11 @@
     cursor: pointer;
 }
 
+.form-control-inline {
+    width: auto;
+    display: inline;
+}
+
 /* ************************************** */
 /* Mandatory CSS required for ng-sortable */
 /* ************************************** */
