--- a/src/app/dashboard/template/worklists.html
+++ b/src/app/dashboard/template/worklists.html
@@ -14,8 +14,19 @@
         <div class="col-sm-4" ng-repeat="worklist in worklists">
             <table class="table table-striped table-hover">
                 <thead>
-                    <th>
+                    <th ng-show="!worklist.editing">
                         {{worklist.title}}
+                        <a href ng-click="toggleEditMode(worklist)">
+                            <i class="fa fa-pencil"></i>
+                        </a>
+                        <button type="button" class="close" title="Delete"
+                                ng-click="remove(worklist)">
+                            &times;
+                        </button>
+                    </th>
+                    <th ng-show="worklist.editing">
+                        <input type="text" class="form-control form-control-inline"
+                               ng-model="worklist.title">
                         <a href ng-click="toggleEditMode(worklist)">
                             <i class="fa fa-pencil"></i>
                         </a>
