--- a/src/app/storyboard/template/header_menu.html
+++ b/src/app/storyboard/template/header_menu.html
@@ -56,6 +56,15 @@
                     New Worklist
                 </button>
             </li>
+            <li>&nbsp;&nbsp;</li>
+            <li>
+                <button type="button"
+                        class="btn btn-primary navbar-btn"
+                        ng-click="newBoard()">
+                    <i class="fa fa-plus-circle"></i>
+                    New Board
+                </button>
+            </li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
