More kanban work
Change-Id: I21734b252e2279ec8253ceaf39a5de7970186c33

--- a/src/app/dashboard/template/kanban.html
+++ b/src/app/dashboard/template/kanban.html
@@ -140,8 +140,8 @@
 
 <!-- Template for the board's lanes -->
 <script type="text/ng-template" id="/inline/kanban_lanes.html">
-    <div class="kanban-board" as-sortable="lanesSortable" ng-model="worklists">
-        <div class="kanban-lane" as-sortable-item ng-repeat="worklist in worklists">
+    <div class="kanban-board" as-sortable="lanesSortable" ng-model="board.worklists">
+        <div class="kanban-lane" as-sortable-item ng-repeat="worklist in board.worklists">
             <span ng-if="!worklist.editing">
                 <i class="fa fa-bars" as-sortable-item-handle></i>
                 <a class="kanban-lane-title" ng-click="toggleEditLane(worklist)">
