More kanban tidying
Change-Id: I9e615ad85abf80a52ebe830040ca921d7ac426b7

--- a/src/app/dashboard/template/submenu.html
+++ b/src/app/dashboard/template/submenu.html
@@ -14,19 +14,14 @@
   ~ under the License.
   -->
 <ul class="nav nav-pills nav-stacked text-center">
-    <li active-path="^\/dashboard/home.*">
-        <a href="#!/dashboard/home" title="Dashboard">
+    <li active-path="^\/dashboard/stories.*">
+        <a href="#!/dashboard/stories" title="Stories">
             <i class="fa fa-sb-user fa-lg"></i>
         </a>
     </li>
-    <li active-path="^\/dashboard/kanban.*">
-        <a href="#!/dashboard/kanban" title="Kanban Test">
+    <li active-path="^\/dashboard/boards.*">
+        <a href="#!/dashboard/boards" title="Boards and Worklists">
             <i class="fa fa-tasks fa-lg"></i>
-        </a>
-    </li>
-    <li active-path="^\/dashboard/worklists.*">
-        <a href="#!/dashboard/worklists" title="Worklist Test">
-            <i class="fa fa-list-alt fa-lg"></i>
         </a>
     </li>
 </ul>
