More things that are kanban
Change-Id: I0b1ac0d9a1c75adee62ef407e3d3a3e4109a84b8

--- a/src/app/dashboard/template/submenu.html
+++ b/src/app/dashboard/template/submenu.html
@@ -16,7 +16,7 @@
 <ul class="nav nav-pills nav-stacked text-center">
     <li active-path="^\/dashboard/stories.*">
         <a href="#!/dashboard/stories" title="Stories">
-            <i class="fa fa-sb-user fa-lg"></i>
+            <i class="fa fa-sb-story fa-lg"></i>
         </a>
     </li>
     <li active-path="^\/dashboard/boards.*">
