--- a/src/app/worklists/template/detail.html
+++ b/src/app/worklists/template/detail.html
@@ -1,59 +1,52 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-sm-12">
-            <h1 class="no-margin-bottom">Worklists Test</h1>
+        <div class="col-sm-12" ng-show="!worklist.editing">
+            <h1 class="no-margin-bottom" view-title>
+                {{worklist.title}}
+                <a ng-click="toggleEditMode()">
+                    <i class="fa fa-pencil"></i>
+                </a>
+                <button type="button" class="pull-right close" title="Delete"
+                        ng-click="remove()">
+                    <i class="fa fa-times"></i>
+                </button>
+            </h1>
         </div>
-        <div class="col-sm-12">
-            <p class="text-muted">
-                This is a place for testing ideas regarding Worklists. Things
-                here probably don't work.
-            </p>
+        <div class="col-sm-12" ng-show="worklist.editing">
+            <h1 class="no margin-bottom">
+                <input type="text" class="form-control form-control-inline h1"
+                       ng-model="worklist.title">
+                <a ng-click="toggleEditMode()">
+                    <i class="fa fa-pencil"></i>
+                </a>
+                <button type="button" class="pull-right close" title="Delete"
+                        ng-click="remove()">
+                    <i class="fa fa-times"></i>
+                </button>
+            </h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-4" ng-repeat="worklist in worklists">
+        <div class="col-sm-12">
             <table class="table table-striped table-hover">
-                <thead>
-                    <th ng-show="!worklist.editing">
-                        {{worklist.title}}
-                        <a href ng-click="toggleEditMode(worklist)">
-                            <i class="fa fa-pencil"></i>
-                        </a>
-                        <button type="button" class="close" title="Delete"
-                                ng-click="remove(worklist)">
-                            &times;
-                        </button>
-                    </th>
-                    <th ng-show="worklist.editing">
-                        <input type="text" class="form-control form-control-inline"
-                               ng-model="worklist.title">
-                        <a href ng-click="toggleEditMode(worklist)">
-                            <i class="fa fa-pencil"></i>
-                        </a>
-                        <button type="button" class="close" title="Delete"
-                                ng-click="remove(worklist)">
-                            &times;
-                        </button>
-                    </th>
-                </thead>
                 <tbody as-sortable="sortableOptions" ng-model="worklist.items"
                        ng-show="!worklist.editing">
                     <tr as-sortable-item ng-repeat="item in worklist.items">
                         <td as-sortable-item-handle ng-switch="item.type" class="hover-row"
                             title="{{item.type}}: {{item.title}}">
                             <a href="#!/story/{{item.value}}" ng-switch-when="story">
-                                <div class="col-sm-2">
+                                <div class="col-sm-1">
                                     <i class="fa fa-sb-story text-muted"></i>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-11">
                                     {{item.title}}
                                 </div>
                             </a>
                             <a href="#!/story/{{item.story_id}}" ng-switch-when="task">
-                                <div class="col-sm-2">
+                                <div class="col-sm-1">
                                     <i class="fa fa-tasks text-muted"></i>
                                 </div>
-                                <div class="col-sm-10">
+                                <div class="col-sm-11">
                                     {{item.title}}
                                 </div>
                             </a>
@@ -65,24 +58,24 @@
                         <td ng-switch="item.type" class="hover-row"
                             title="{{item.type}}: {{item.title}}">
                             <a href="#!/story/{{item.value}}" ng-switch-when="story">
-                                <div class="col-sm-2">
+                                <div class="col-sm-1">
                                     <i class="fa fa-sb-story text-muted"></i>
                                 </div>
-                                <div class="col-sm-8">
+                                <div class="col-sm-10">
                                     {{item.title}}
                                 </div>
                             </a>
                             <a href="#!/story/{{item.story_id}}" ng-switch-when="task">
-                                <div class="col-sm-2">
+                                <div class="col-sm-1">
                                     <i class="fa fa-tasks text-muted"></i>
                                 </div>
-                                <div class="col-sm-8">
+                                <div class="col-sm-10">
                                     {{item.title}}
                                 </div>
                             </a>
-                            <div class="col-sm-2">
+                            <div class="col-sm-1">
                                 <button type="button" class="close" title="Remove"
-                                   ng-click="removeItem(worklist, item)">
+                                   ng-click="removeItem(item)">
                                     &times;
                                 </button>
                             </div>
@@ -98,7 +91,7 @@
                 </tbody>
                 <tbody>
                     <tr class="hover-row text-center" title="Add Item"
-                        ng-click="addItem(worklist)">
+                        ng-click="addItem()">
                         <td>
                             Add Items
                         </td>
